--- a/HusbandForAnHour/HusbandForAnHour.TG/HusbandForAnHour.TG.csproj
+++ b/HusbandForAnHour/HusbandForAnHour.TG/HusbandForAnHour.TG.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Telegram.Bot" Version="19.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HusbandForAnHour.BLL\HusbandForAnHour.BLL.csproj" />
+  </ItemGroup>
+
 </Project>
